<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_height="21dp"
        android:layout_marginTop="47dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:hint="@string/nombre_hint"
        android:autofillHints="name"
        android:layout_width="210dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:ems="10"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"
        android:layout_height="21dp"
        android:text="@string/fecha"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <DatePicker
        android:id="@+id/editTextDate"
        android:autofillHints=""
        android:hint="@string/fecha_hint"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:ems="10"
        android:inputType="date"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="21dp"
        android:text="@string/telefono"
        app:layout_constraintTop_toBottomOf="@id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
    />

    <EditText
        android:id="@+id/editTextPhone"
        android:autofillHints="phone"
        android:hint="@string/telefono_hint"
        android:layout_width="210dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:ems="10"
        android:inputType="phone"
        tools:layout_editor_absoluteY="351dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="210dp"
        android:layout_height="21dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/email"
        tools:layout_editor_absoluteY="318dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        android:layout_width="210dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="210dp"
        android:layout_height="21dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/descripcion"
        tools:layout_editor_absoluteY="408dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:hint="@string/descripcion_hint"
        android:autofillHints=""
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteY="441dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="0.952" />

</androidx.constraintlayout.widget.ConstraintLayout>